<resources>

    <string name="app_name">MRZ Scanner</string>

    <string name="input_passport_number">ID/Passport number</string>
    <string name="input_expiration_date">Expiration date</string>
    <string name="input_date_of_birth">Date of birth</string>

    <string name="info_loading">Reading data…</string>
    <string name="info_scan_passport">Enter Data and put your Document on the phone.</string>
    <string name="error_input">Please provide details to read passport</string>
    <string name="error_read">Failed to read passport</string>

    <string name="result_first_name">First name</string>
    <string name="result_last_name">Last name</string>
    <string name="result_gender">Gender</string>
    <string name="result_state">Country</string>
    <string name="result_nationality">Nationality</string>
    <string name="result_passive_auth">Passive Authentication</string>
    <string name="result_chip_auth">Chip Authentication</string>

    <string name="pass">Pass</string>
    <string name="failed">Failed</string>

</resources>
